--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <i class="social fab fa-facebook"></i>
     <i class="social fab fa-twitter"></i>
     <i class="social fas fa-envelope-square"></i>
-    <p class="make">© Copyright 2021 TinDog</p> 
+    <p class="make">© Copyright 2021 ZeDog</p> 
   </footer>
   
 
